k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000






# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#   # config to run nginx controller and the default root is /
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules: 
#     - http:
#         paths:
#           - path: /
#             backend: 
#               serviceName: client-cluster-ip-service
#               servicePort: 3000
#           - path: /api/
#             backend: 
#               serviceName: server-cluster-ip-service
#               servicePort: 5000
              
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#   - host: "fib.p"
#     http:
#       paths:
#       - pathType: Prefix
#         path: /?(.*)
#         backend:
#           service:
#             name: client-cluster-ip-service
#             port:
#               number: 3000
#   - host: "fib.p"
#     http:
#       paths:
#       - pathType: Prefix
#         path: /api/?(.*)
#         backend:
#           service:
#             name: server-cluster-ip-service
#             port:
#               number: 5000
